Add fading scroll effect. Add Bio Component

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -2,8 +2,11 @@
 <html lang="en">
   <head>
     <title>React App</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poiret+One&family=Rubik+Mono+One&display=swap" rel="stylesheet">
   </head>
-  <body>
+  <body style="background-color: black">
     <div id="root"></div>
+    <script src="https://kit.fontawesome.com/52e276fb65.js" crossorigin="anonymous"></script>
   </body>
 </html>
