Add profile photo. Fix main body spacing. Finalize links on page.

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,7 +3,8 @@
   <head>
     <title>React App</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poiret+One&family=Rubik+Mono+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Poiret+One&family=Rubik+Mono+One&display=swap" rel="stylesheet">
+
   </head>
   <body style="background-color: black">
     <div id="root"></div>
