Finish build of project squares. Add favicon. Tweak general layout.

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>React App</title>
+    <title>Tyler Nevell's Portfolio</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Poiret+One&family=Rubik+Mono+One&display=swap" rel="stylesheet">
-
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico?v=2">
   </head>
   <body style="background-color: black">
     <div id="root"></div>
